# resum-vizor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
diploma-verify-frontend/: .dockerignore  .env.production  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
diploma-verify-frontend/coverage/: api.js.html  index.html
diploma-verify-frontend/diploma-verify-frontend/: .env.development  Makefile  docker-compose.frontend.yml  docker-entrypoint.sh  index.html  test-debug.js
diploma-verify-frontend/src/: App.vue  main.js
diploma-verify-frontend/tests/: setup.js
grafana/dashboards/: resume-visitor-overview.json  resume-vizor-overview.json
migrations/: 0001_init.sql  0002_ats_api_keys.sql  0003_diploma_qr_codes.sql
prometheus/: prometheus.yml
services/qr-service/: Dockerfile  go.mod  go.sum  main.go
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/application/: dto.rs  dto_ats.rs  dto_auth.rs  dto_diploma.rs  dto_hr.rs  dto_mod.rs  dto_qr.rs  dto_student.rs  mod.rs  ports.rs  services.rs  services_ats.rs  services_auth.rs  services_diploma.rs  services_mod.rs  services_qr.rs  services_support.rs  services_tests.rs
src/domain/: ats.rs  diploma.rs  hashing.rs  ids.rs  mod.rs  qr.rs  university.rs  user.rs
src/http/: auth.rs  common.rs  docs.rs  handlers.rs  hr.rs  middleware.rs  mod.rs  router.rs  student.rs  university.rs
src/infrastructure/: api_keys.rs  auth.rs  cache.rs  hashing.rs  metrics.rs  mod.rs  qr_client.rs  (+2 more)
tests/: http_api.rs
(+57 files in other folders)
