[package]
name = "resume-vizor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["multipart"] }
base64 = "0.22.1"
blake3 = "1.8.2"
calamine = "0.31.0"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
http = "1.3.1"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
prometheus = "0.13.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
secrecy = { version = "0.10.3", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

